etc/network/iptables-init
# Generated by iptables-save v1.6.1 on Fri Sep 22 13:32:04 2017
*filter
:INPUT DROP [8:832]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [56:5624]
:reject_func - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m conntrack --ctstate RELATED -j ACCEPT
-A INPUT -p udp -m udp --dport 5353 -m pkttype --pkt-type multicast -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A reject_func -p tcp -j REJECT --reject-with tcp-reset
-A reject_func -p udp -j REJECT --reject-with icmp-port-unreachable
-A reject_func -j REJECT --reject-with icmp-proto-unreachable
COMMIT
# Completed on Fri Sep 22 13:32:04 2017
